k8s/arr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:1.35.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: prowlarr-data
        ports:
        - containerPort: 9696
        livenessProbe:
          httpGet:
            path: /
            port: 9696
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 9696
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data-nfs-pvc
